--- a/composer.json
+++ b/composer.json
@@ -2,11 +2,9 @@
     "name": "hitaaksata/bpjs-services",
     "description": "package briging bpjs, vclaim, pcare, aplicare, antrian",
     "type": "library",
+    "version": "1.0.0",
     "require": {
         "guzzlehttp/guzzle": ">=6.0",
-        "illuminate/support": "12.0",
-        "illuminate/config": "12.1",
-        "illuminate/collections": "12.0"
     },
     "license": "MIT",
     "autoload": {
