--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "type": "library",
     "version": "1.0.0",
     "require": {
-        "guzzlehttp/guzzle": ">=6.0",
+        "guzzlehttp/guzzle": ">=6.0"
     },
     "license": "MIT",
     "autoload": {
