--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,9 @@
         "hitaaksata/bpjs-services": "dev-main"
     },
     "license": "MIT",
+    "config": {
+        "sort-packages": true
+      },
     "autoload": {
         "psr-4": {
             "Hitaaksata\\Bpjs\\": "src/"
@@ -21,5 +24,12 @@
     ],
     "require-dev": {
         "phpunit/phpunit": "^11.5"
-    }
+    },
+    "extra": {
+        "laravel": {
+          "providers": [
+            "Hitaaksata\\Bpjs\\BpjsServiceProvider"
+          ]
+        }
+      }
 }
