--- a/composer.json
+++ b/composer.json
@@ -4,8 +4,7 @@
     "type": "library",
     "minimum-stability": "dev",
     "require": {
-        "guzzlehttp/guzzle": ">=6.0",
-        "hitaaksata/bpjs-services": "dev-main"
+        "guzzlehttp/guzzle": ">=6.0"
     },
     "license": "MIT",
     "config": {
