--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,7 @@
     "description": "package briging bpjs, vclaim, pcare, aplicare, antrian",
     "type": "library",
     "minimum-stability": "dev",
+    "prefer-stable": true,
     "require": {
         "guzzlehttp/guzzle": "^6.5 || ^7.0"
     },
